--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "bun --watch run ./app.ts",
-    "seed": "bun run prisma/seed.ts",
+    "seed": "tsx prisma/seed.ts",
     "start": "bun run ./app.ts",
     "postinstall": "prisma generate"
   },
@@ -24,6 +24,7 @@
     "@types/node": "^20.12.12",
     "@types/ua-parser-js": "^0.7.39",
     "prisma": "^5.14.0",
+    "tsx": "^4.10.3",
     "typescript": "5.3.3"
   },
   "dependencies": {
