--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,11 @@
     "target": "ES2020",
     "types": ["node","bun"],
     "useDefineForClassFields": true,
+    "paths": {
+        "bpmn-moddle":[
+            "./types/bpmn-moddle.d.ts"
+        ]
+    }
   },
   "exclude": ["dist", "node_modules", "bin"],
   "include": ["./**/*.ts"]
