--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,13 +7,14 @@
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "lib": ["ES2018", "DOM", "DOM.Iterable"],
+    "lib": ["ES2018"],
     "module": "ESNext",
     "moduleResolution": "Node",
     "noEmit": true,
     "outDir": "dist",
     "resolveJsonModule": true,
     "rootDir": "./",
+    "baseUrl": "./",
     "skipLibCheck": true,
     "strict": true,
     "target": "ES2020",
