--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@types/ua-parser-js": "^0.7.39",
     "cross-env": "^7.0.3",
     "prisma": "^5.14.0",
-    "tsx": "^4.10.3",
+    "tsx": "^4.11.0",
     "typescript": "5.3.3"
   },
   "dependencies": {
@@ -35,6 +35,7 @@
     "cron": "^3.1.7",
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
+    "glob": "^10.3.16",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "koa": "^2.15.3",
