--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "ES2020",
-    "types": ["node","bun"],
+    "types": ["node"],
     "useDefineForClassFields": true,
     "paths": {
         "bpmn-moddle":[
