--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.14.0",
+    "@types/xml2js": "^0.4.14",
     "bpmn-moddle": "^9.0.1",
     "captcha.gif": "^1.0.11",
     "cron": "^3.1.7",
