--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "koa-send": "^5.0.1",
     "log4js": "^6.9.1",
     "nanoid": "^5.0.7",
+    "node-disk-info": "^1.3.0",
     "node-fetch": "^3.3.2",
     "reflect-metadata": "^0.2.2",
     "ua-parser-js": "^1.0.37",
