--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,13 @@ REDIS_HOST="127.0.0.1"
 REDIS_PORT=6379
 REDIS_KEY_PREFIX=""
 DEMO_MODE=false # 演示模式
+
+# camunda环境变量
+ZEEBE_ADDRESS='localhost:26500'
+ZEEBE_CLIENT_ID='zeebe'
+ZEEBE_CLIENT_SECRET='zecret'
+CAMUNDA_OAUTH_URL='http://localhost:18080/auth/realms/camunda-platform/protocol/openid-connect/token'
+CAMUNDA_TASKLIST_BASE_URL='http://localhost:8082'
+CAMUNDA_OPERATE_BASE_URL='http://localhost:8081'
+# CAMUNDA_OPTIMIZE_BASE_URL='http://localhost:8083'
+# CAMUNDA_MODELER_BASE_URL='http://localhost:8070/api'
