--- a/.env.example
+++ b/.env.example
@@ -6,11 +6,16 @@ REDIS_KEY_PREFIX=""
 DEMO_MODE=false # 演示模式
 
 # camunda环境变量
-ZEEBE_ADDRESS='localhost:26500'
+ZEEBE_GRPC_ADDRESS='localhost:26500'
+ZEEBE_REST_ADDRESS='http://localhost:8080'
 ZEEBE_CLIENT_ID='zeebe'
 ZEEBE_CLIENT_SECRET='zecret'
+# CAMUNDA_OAUTH_STRATEGY=OAUTH # 禁用身份验证
 CAMUNDA_OAUTH_URL='http://localhost:18080/auth/realms/camunda-platform/protocol/openid-connect/token'
 CAMUNDA_TASKLIST_BASE_URL='http://localhost:8082'
 CAMUNDA_OPERATE_BASE_URL='http://localhost:8081'
-# CAMUNDA_OPTIMIZE_BASE_URL='http://localhost:8083'
+CAMUNDA_OPTIMIZE_BASE_URL='http://localhost:8083'
 # CAMUNDA_MODELER_BASE_URL='http://localhost:8070/api'
+
+# TLS for gRPC is on by default. If the Zeebe broker is not secured by TLS, turn it off
+CAMUNDA_SECURE_CONNECTION=false
