--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@midwayjs/mock": "^3.12.0",
+    "@types/jest": "^29.2.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/koa": "^2.15.0",
     "@types/koa-router": "^7.4.8",
@@ -23,12 +25,22 @@
     "@types/node": "^20.12.12",
     "@types/ua-parser-js": "^0.7.39",
     "cross-env": "^7.0.3",
+    "jest": "^29.2.2",
+    "mwts": "^1.3.0",
+    "mwtsc": "^1.4.0",
     "prisma": "^5.15.0",
+    "ts-jest": "^29.0.3",
     "tsx": "^4.11.0",
     "typescript": "5.3.3"
   },
   "dependencies": {
     "@camunda8/sdk": "^8.6.2",
+    "@midwayjs/bootstrap": "^3.12.0",
+    "@midwayjs/core": "^3.12.0",
+    "@midwayjs/info": "^3.12.0",
+    "@midwayjs/koa": "^3.12.0",
+    "@midwayjs/logger": "^3.1.0",
+    "@midwayjs/validate": "^3.12.0",
     "@prisma/client": "^5.15.0",
     "captcha.gif": "^1.0.11",
     "cron": "^3.1.7",
